--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -87,13 +87,22 @@
     </div>
   </div>
 </div> -->
+<div class="row" style="margin-top: 100px !important;">
+  <div class="col-md-1"></div>
+  <div class="col-md-3">
+    <mat-form-field appearance="fill">
+      <mat-label>Toppings</mat-label>
+      <mat-select [formControl]="toppings" multiple>
+        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="ml-md-auto">
+    <p>Last Updated:</p>
+  </div>
+</div>
 
-<mat-form-field appearance="fill">
-  <mat-label>Toppings</mat-label>
-  <mat-select [formControl]="toppings" multiple>
-    <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
-  </mat-select>
-</mat-form-field>
+
 
 
 
