--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -97,8 +97,8 @@
       </mat-select>
     </mat-form-field>
   </div>
-  <div class="ml-md-auto">
-    <p>Last Updated:</p>
+  <div class="col-md-3 offset-md-4">
+    <p>Last Updated: 11/09/2021 11:32:34 AM</p>
   </div>
 </div>
 
