Card For Dashboard

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -89,17 +89,99 @@
 </div> -->
 <div class="row" style="margin-top: 100px !important;">
   <div class="col-md-1"></div>
-  <div class="col-md-3">
-    <mat-form-field appearance="fill">
-      <mat-label>Toppings</mat-label>
+  <div class="col-md-2">
+    <mat-form-field class="no-line">
+      <mat-label style="color: black;">Showing: All States</mat-label>
       <mat-select [formControl]="toppings" multiple>
         <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
   <div class="col-md-3 offset-md-4">
-    <p>Last Updated: 11/09/2021 11:32:34 AM</p>
+
+
+    <p style="margin-left:23%;">
+      Last Updated: 11/09/2021 11:32:34 AM
+    </p>
+
   </div>
+  <div class="col-md-1">
+    <mat-icon style="font-size: 20px !important;">refresh</mat-icon>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-1">
+
+  </div>
+  <div class="col-md-11">
+    <div id="dashboard" layout="column">
+      <div id="icon-container">
+        <div class="dashboard-container">
+          <div class="dashboard-box-container">
+            <div class="wrapper">
+              <div class="icon-wrapper-shadow"></div>
+              <div class="icon-wrapper open-requests">
+                <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
+              </div>
+              <div class="dashboard-box">
+                <div class="dashboard-label open-requests">
+                  Open Requests
+                </div>
+                <div class="dashboard-count">100</div>
+              </div>
+            </div>
+          </div>
+          <div class="dashboard-box-container">
+            <div class="wrapper">
+              <div class="icon-wrapper-shadow"></div>
+              <div class="icon-wrapper open-requests">
+                <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
+              </div>
+              <div class="dashboard-box">
+                <div class="dashboard-label open-requests">
+                  Open Requests
+                </div>
+                <div class="dashboard-count">100</div>
+              </div>
+            </div>
+          </div>
+          <div class="dashboard-box-container">
+            <div class="wrapper">
+              <div class="icon-wrapper-shadow"></div>
+              <div class="icon-wrapper open-requests">
+                <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
+              </div>
+              <div class="dashboard-box">
+                <div class="dashboard-label open-requests">
+                  Open Requests
+                </div>
+                <div class="dashboard-count">100</div>
+              </div>
+            </div>
+          </div>
+          <div class="dashboard-box-container">
+            <div class="wrapper">
+              <div class="icon-wrapper-shadow"></div>
+              <div class="icon-wrapper open-requests">
+                <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
+              </div>
+              <div class="dashboard-box">
+                <div class="dashboard-label open-requests">
+                  Open Requests
+                </div>
+                <div class="dashboard-count">100</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="dashboard-results-container" ui-view="">
+      </div>
+    </div>
+
+  </div>
+
 </div>
 
 
