--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,27 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.mt20 {
+  margin-top: 20%;
+}
+
+.mt40 {
+  margin-top: 40%;
+}
+
+.mt60 {
+  margin-top: 60%;
+}
+
+.mt80 {
+  margin-top: 80%;
+}
+
+.mt100 {
+  margin-top: 100%;
+}
+
+.mt120 {
+  margin-top: 120%;
+}
