--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -134,12 +134,12 @@
           <div class="dashboard-box-container">
             <div class="wrapper">
               <div class="icon-wrapper-shadow"></div>
-              <div class="icon-wrapper open-requests">
+              <div class="icon-wrapper overdue">
                 <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
               </div>
               <div class="dashboard-box">
-                <div class="dashboard-label open-requests">
-                  Open Requests
+                <div class="dashboard-label overdue">
+                  Over Due
                 </div>
                 <div class="dashboard-count">100</div>
               </div>
@@ -148,12 +148,12 @@
           <div class="dashboard-box-container">
             <div class="wrapper">
               <div class="icon-wrapper-shadow"></div>
-              <div class="icon-wrapper open-requests">
-                <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
+              <div class="icon-wrapper due-today">
+                <mat-icon style="font-size: 60px; color: white;"> notifications_active</mat-icon>
               </div>
               <div class="dashboard-box">
-                <div class="dashboard-label open-requests">
-                  Open Requests
+                <div class="dashboard-label due-today">
+                  Due Today
                 </div>
                 <div class="dashboard-count">100</div>
               </div>
@@ -162,11 +162,11 @@
           <div class="dashboard-box-container">
             <div class="wrapper">
               <div class="icon-wrapper-shadow"></div>
-              <div class="icon-wrapper open-requests">
+              <div class="icon-wrapper awaiting-on-hold">
                 <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
               </div>
               <div class="dashboard-box">
-                <div class="dashboard-label open-requests">
+                <div class="dashboard-label awaiting-on-hold">
                   Open Requests
                 </div>
                 <div class="dashboard-count">100</div>
