--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -9,11 +9,13 @@
                     <form>
                         <div class="form-group">
                             <label class="form-control-label">Username</label>
-                            <input type="text" class="form-control">
+                            <input type="text" id="username" name="username" class="form-control"
+                                [(ngModel)]="loginModel.username">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Password</label>
-                            <input type="password" class="form-control" i>
+                            <input type="password" id="password" name="password" class="form-control"
+                                [(ngModel)]="loginModel.password">
                         </div>
 
                         <div class="col-lg-12 loginbttm">
@@ -23,7 +25,7 @@
                                         style="padding-right: 10px; text-decoration: none !important;">Reset
                                         Password</a>
                                     <button type="submit" class="btn btn-warning" style="margin-right: 5% !important;"
-                                        (click)="openDashboard()">LOG
+                                        (click)="loginUser()">LOG
                                         IN</button>
                                 </div>
 
