--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -27,7 +27,7 @@
   <div class="col-md-1">
 
   </div>
-  <div class="col-md-11">
+  <div class="col-md-10">
     <div id="dashboard" layout="column">
       <div id="icon-container">
         <div class="dashboard-container">
@@ -35,7 +35,7 @@
             <div class="wrapper">
               <div class="icon-wrapper-shadow"></div>
               <div class="icon-wrapper open-requests">
-                <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
+                <mat-icon style=" font-size: 40px !important;"> format_list_bulleted</mat-icon>
               </div>
               <div class="dashboard-box">
                 <div class="dashboard-label open-requests">
@@ -49,7 +49,7 @@
             <div class="wrapper">
               <div class="icon-wrapper-shadow"></div>
               <div class="icon-wrapper overdue">
-                <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
+                <mat-icon style=" font-size: 40px !important;"> assignment_late</mat-icon>
               </div>
               <div class="dashboard-box">
                 <div class="dashboard-label overdue">
@@ -63,7 +63,7 @@
             <div class="wrapper">
               <div class="icon-wrapper-shadow"></div>
               <div class="icon-wrapper due-today">
-                <mat-icon style="font-size: 60px; color: white;"> notifications_active</mat-icon>
+                <mat-icon style=" font-size: 40px !important;"> notifications_active</mat-icon>
               </div>
               <div class="dashboard-box">
                 <div class="dashboard-label due-today">
@@ -77,11 +77,11 @@
             <div class="wrapper">
               <div class="icon-wrapper-shadow"></div>
               <div class="icon-wrapper awaiting-on-hold">
-                <mat-icon style="font-size: 60px; color: white;"> format_list_bulleted</mat-icon>
+                <mat-icon style=" font-size: 40px !important;" > gavel</mat-icon>
               </div>
               <div class="dashboard-box">
                 <div class="dashboard-label awaiting-on-hold">
-                  Open Requests
+                  Awaiting
                 </div>
                 <div class="dashboard-count">100</div>
               </div>
