--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,9 +8,10 @@
   </div>
 </nav> -->
 <nav class="navbar navbar-dark navbar-expand-sm fixed-top" style="background-color: #2f3a81;">
-  <div class="container">
+  <div class="container" style="margin:5% 5% 5% 5% !important; display: contents !important">
+    <div style="padding-left: 1.5% !important;">
     <div id="brand-logo"><img src="../../../assets/img/logo.png" alt="AiM logo"></div>
-
+  </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
     </button>
