--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -203,8 +203,12 @@ $open-requests: #1976d2;
       height: 60px;
       width: 60px;
       position: absolute;
-      left: 15px;
-      top: 20px;
+     
+      padding-left: 10px !important;
+      padding-top: 10px;
+      color: white;
+      padding-bottom: 10px;
+      padding-right: 10px;
 
       md-icon {
         width: 60px;
